# VSCodeCppIde

./: README.md
windows/msvc/exe/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  version.rc.in
windows/msvc/exe/src/: main.cpp
